crates/daemon/tests/snapshots/fixture_contracts__fake_mailpit_fixture_cli_ignores_extra_arguments.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    true,
    [
        true,
        true,
    ],
    true,
)
