crates/daemon/tests/snapshots/fixture_contracts__fixture_command_captures_verbose_output_without_pipe_backpressure.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    Some(
        0,
    ),
    2097152,
    2097152,
)
