crates/daemon/tests/snapshots/fixture_contracts__fixture_handler_marker_requires_complete_contents.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
"timed out waiting for fixture handler marker at <tempdir>/handler-started"
