crates/daemon/tests/snapshots/fixture_contracts__mailpit_fixture_cli_preserves_shell_contract.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "unexpected argument: --unexpected\n",
    },
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "missing required mailpit argument\n",
    },
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "missing --disable-version-check\n",
    },
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "unexpected database path: mailpit.db\n",
    },
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "database directory does not exist: <tempdir>/missing\n",
    },
    FixtureOutput {
        code: Some(
            2,
        ),
        stdout: "",
        stderr: "database directory does not exist: <tempdir>/missing\n",
    },
)
