crates/daemon/tests/snapshots/fixture_contracts__mysql_fixture_cli_preserves_shell_contract.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    FixtureOutput {
        code: Some(
            64,
        ),
        stdout: "",
        stderr: "mysqld initialization must start with --no-defaults\n",
    },
    FixtureOutput {
        code: Some(
            0,
        ),
        stdout: "",
        stderr: "",
    },
    false,
    false,
    true,
)
