crates/daemon/tests/snapshots/fixture_contracts__postgres_fixture_cli_preserves_shell_contract.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    FixtureOutput {
        code: Some(
            64,
        ),
        stdout: "",
        stderr: "unexpected postgres argument: --unexpected\n",
    },
    FixtureOutput {
        code: Some(
            64,
        ),
        stdout: "",
        stderr: "postgres data dir is not initialized\n",
    },
)
