crates/daemon/tests/snapshots/fixture_contracts__rustfs_fixture_cli_preserves_shell_contract.snap
---
source: crates/daemon/tests/fixture_contracts.rs
expression: snapshot
---
(
    Some(
        1,
    ),
    "",
    true,
    false,
    true,
    true,
    false,
    false,
    false,
)
